# blockinfo_mysql/api/swagger/swagger.yaml
@@ -18,6 +18,24 @@ consumes:
 produces:
   - application/json
 paths:
+  /channels:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: channels
+    get:
+      description: Returns 'channels' to the caller
+      # used as the method name of the controller
+      operationId: channels
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ChannelsResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /blocks:
     # binds a127 app logic to a route
     x-swagger-router-controller: blocks
@@ -58,6 +76,12 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  ChannelsResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
   BlocksResponse:
     required:
       - message
